[workspace]
members = ["control", "schema"]

[package]
name = "big"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
axum = "0.8.6"
big-schema = { version = "0.1.0", path = "schema" }
bincode = "2.0.1"
flexi_logger = "0.31.7"
hdrhistogram = "7.5.4"
log = "0.4.28"
quinn = "0.11.9"
rand = "0.9.2"
rocksdb = { version = "0.24.0", features = ["jemalloc"] }
sha2 = "0.10.9"
tikv-jemallocator = "0.6.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
