[package]
name = "big-control"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
big-schema = { version = "0.1.0", path = "../schema" }
hdrhistogram = "7.5.4"
reqwest = { version = "0.12.23", features = ["json"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
